--- a/css/style.css
+++ b/css/style.css
@@ -79,6 +79,7 @@ h2.title {
 .social .instagram:hover {  color:#9e7144; }
 .social .dribbble:hover {  color:#ea4c89; }
 .social .linkedin:hover {  color:#4875B4; }
+.social .github:hover {  color:#333333; }
 
 
 .social i {
